fix(test): suíte portável — remove drive Windows cravado e trava com catraca
DestinoPadraoKaraokeSimplesTest quebrava no contêiner Linux com
/workspace/C:/animes/.... Path.of relativo, raiz via FileSystems, fixtures
Windows montadas em runtime. Catraca varre src/test/java com exceção nominal
dos três harnesses de medicao/.

Co-authored-by: Paulo André Carminati <carmipa@users.noreply.github.com>